04 DOM: TODO App

--- a/dynamicdiv/index.html
+++ b/dynamicdiv/index.html
@@ -14,7 +14,11 @@
         .container {
             width: 300px;
             height: 300px;
-            border: 1px solid black;
+            border: 1px solid rgb(240, 73, 73);
+            background-color: rgb(255, 127, 155);
+            text-align: center;
+            display: grid;
+            place-items: center;
         }
     </style>
 </head>
