--- a/ppt/index.html
+++ b/ppt/index.html
@@ -30,6 +30,9 @@
     <div class="result">
         <center><h1>Resultado: <span></span></h1></center>
     </div>
+    <div class="button-container">
+        <center><a href="http://127.0.0.1:5500/index.html" class="button">Regresar</a></center>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
