--- a/animado/index.html
+++ b/animado/index.html
@@ -6,6 +6,8 @@
     <title>Dibujo animado</title>
     <style>
         body {
+            margin: 0;
+            padding: 0;
             width: 100vw;
             height: 100vh;
             display: grid;
@@ -19,12 +21,48 @@
             border: 1px solid black;
             background-color: black;
         }
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 12px 24px;
+            font-size: 16px;
+            font-weight: bold;
+            color: white;
+            background-color: #4CAF50; 
+            border: none;
+            border-radius: 8px;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #45a049; 
+            transform: scale(1.05); 
+        }
+
+        .button:active {
+            background-color: #3e8e41;
+            transform: scale(0.98);
+        }
+
+        .button:focus {
+            outline: none;
+            box-shadow: 0 0 10px rgba(76, 175, 80, 0.5); 
+        }
+
     </style> 
 </head>
 <body>
     <div class="container">
         <h2>Mi dibujo con Canvas</h2>
         <canvas id="lienzo" width="600" height="400"></canvas>
+    </div>
+    <div class="button-container">
+        <a href="http://127.0.0.1:5500/index.html" class="button">Regresar</a>
     </div>
     <script src="./square.js"></script>
 </body>
