--- a/colorsinput/index.html
+++ b/colorsinput/index.html
@@ -6,6 +6,8 @@
     <title>DOM Propiedades</title>
     <style>
         body {
+            margin: 0;
+            padding: 0;
             width: 100vw;
             height: 100vh;
             display: grid;
@@ -14,6 +16,38 @@
         body div {
             display: flex;
             flex-direction: column;
+        }
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 12px 24px;
+            font-size: 16px;
+            font-weight: bold;
+            color: white;
+            background-color: #4CAF50; 
+            border: none;
+            border-radius: 8px;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #45a049; 
+            transform: scale(1.05); 
+        }
+
+        .button:active {
+            background-color: #3e8e41;
+            transform: scale(0.98);
+        }
+
+        .button:focus {
+            outline: none;
+            box-shadow: 0 0 10px rgba(76, 175, 80, 0.5); 
         }
     </style>
 </head>
@@ -26,6 +60,9 @@
         <label for="blue">Azul</label>
         <input type="range" id="blue" min="0" max="255">
         <h2>Color: <span></span></h2>
+    </div>
+    <div class="button-container">
+        <a href="http://127.0.0.1:5500/index.html" class="button">Regresar</a>
     </div>
     <script src="./app.js"></script>
 </body>
