--- a/game/index.html
+++ b/game/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dibujo Halloween</title>
+    <title>Mi juego con canvas</title>
     <style>
         body {
             margin: 0;
@@ -18,8 +18,8 @@
             text-align: center;
         }
         #lienzo { 
-            border: 1px solid black;
-            background-color: rgb(204, 140, 135);
+            border: 1px solid white;
+            background-color: black;
         }
         .button-container {
             text-align: center;
@@ -51,13 +51,17 @@
 
         .button:focus {
             outline: none;
-            box-shadow: 0 0 10px rgba(76, 175, 80, 0.5); 
+            box-shadow: 0 0 10px rgba(76, 175, 80, 0.5);
         }
-    </style> 
+
+    </style>
 </head>
 <body>
     <div class="container">
-        <h2>Mi dibujo con Canvas</h2>
+        <h2>Mi juego con Canvas</h2>
+        <div id="score">Puntaje: 0</div>
+        <div id="highScore">Mayor puntaje: 0</div>        
+        <div id="message"></div>
         <canvas id="lienzo" width="600" height="400"></canvas>
     </div>
     <div class="button-container">
