--- a/game/index.html
+++ b/game/index.html
@@ -58,14 +58,14 @@
 </head>
 <body>
     <div class="container">
-        <h2>Mi juego con Canvas</h2>
+        <h2>Game snake.🐍</h2>
         <div id="score">Puntaje: 0</div>
         <div id="highScore">Mayor puntaje: 0</div>        
         <div id="message"></div>
         <canvas id="lienzo" width="600" height="400"></canvas>
     </div>
     <div class="button-container">
-        <a href="http://127.0.0.1:5500/index.html" class="button">Regresar</a>
+        <a href="../index.html" class="button">Regresar</a>
     </div>
     <script src="./app.js"></script>
 </body>
