--- a/animado/index.html
+++ b/animado/index.html
@@ -58,11 +58,11 @@
 </head>
 <body>
     <div class="container">
-        <h2>Mi dibujo con Canvas</h2>
+        <h2>Mi dibujo animado</h2>
         <canvas id="lienzo" width="600" height="400"></canvas>
     </div>
     <div class="button-container">
-        <a href="http://127.0.0.1:5500/index.html" class="button">Regresar</a>
+        <a href="../index.html" class="button">Regresar</a>
     </div>
     <script src="./square.js"></script>
 </body>
