--- a/colorsbg/index.html
+++ b/colorsbg/index.html
@@ -53,7 +53,7 @@
         <h2>Color: <span></span></h2>
     </div>
     <div class="button-container">
-        <a href="http://127.0.0.1:5500/index.html" class="button">Regresar</a>
+        <a href="../index.html" class="button">Regresar</a>
     </div>
     <script src="./app.js"></script>
 </body>
