--- a/dibujo/index.html
+++ b/dibujo/index.html
@@ -61,7 +61,7 @@
         <canvas id="lienzo" width="600" height="400"></canvas>
     </div>
     <div class="button-container">
-        <a href="http://127.0.0.1:5500/index.html" class="button">Regresar</a>
+        <a href="../index.html" class="button">Regresar</a>
     </div>
     <script src="./app.js"></script>
 </body>
