--- a/dynamicdiv/index.html
+++ b/dynamicdiv/index.html
@@ -71,7 +71,7 @@
         <input type="range" id="sombra" min="0" max="255">
     </div>
     <div class="button-container">
-        <a href="http://127.0.0.1:5500/index.html" class="button">Regresar</a>
+        <a href="../index.html" class="button">Regresar</a>
     </div>
     <script src="./app.js"></script>
 </body>
