--- a/todoapp/index.html
+++ b/todoapp/index.html
@@ -18,7 +18,7 @@
        </div>
     </div>
     <div class="button-container">
-        <a href="http://127.0.0.1:5500/index.html" class="button">Regresar</a>
+        <a href="../index.html" class="button">Regresar</a>
     </div>
     <script src="./app.js"></script>
 </body>
