--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             border: none;
             cursor: pointer;
             text-align: center;
-            width: 200px; /* Fija el mismo ancho para todos los botones */
-            height: 50px; /* Fija la misma altura para todos los botones */
-            display: flex; /* Para centrar el texto vertical y horizontalmente */
+            width: 200px; 
+            height: 50px; 
+            display: flex; 
             justify-content: center;
             align-items: center;
             transition: background-color 0.3s ease;
